FPET-179 case flags updates for amend parties scenario